# baby-backend

./: .env.example  .gitignore  README.md  docker-compose.yml  flake.nix  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 91f3bb7a9d2c_create_monitoring_records_table.py  a7b4c1d9e6f2_add_baby_metrics_to_monitoring_records.py  b17b0dfdadbb_create_users_table.py  c3f7a9b12d44_add_monitoring_report_index.py  d4e5f6a7b8c9_add_monitoring_sessions_activity_and_alarms.py  e2c4f6a8b0d1_allow_negative_one_centers.py  f5a83e9faffa_add_password_hash_and_api_tokens.py
app/: main.py
app/alarms/: __init__.py  broker.py  schemas.py
app/auth/: __init__.py  dependencies.py  schemas.py  utils.py
app/core/: config.py
app/llm/: __init__.py
app/models/: __init__.py  alarm_event.py  api_token.py  monitoring_record.py  monitoring_session.py  user.py
app/monitoring/: __init__.py  periods.py  query.py  schemas.py
app/reports/: __init__.py  prompt.py  query.py  routes.py
app/root/: __init__.py
tests/: test_todo_contracts.py
